type fix and new tailwind "full" spacing

--- a/_src/styles/typography/base.scss
+++ b/_src/styles/typography/base.scss
@@ -3,6 +3,18 @@ body {
     @include resp-font-size('base','base','lg','lg','xl');
 }
 
+a {
+    &:not(.btn) {
+        @apply underline;
+        text-underline-offset: 2px;
+        transition: color .2s ease-in-out;
+
+        &:hover {
+            @apply text-red-600;
+        }
+    }
+}
+
 .w-content {
     > * {
         @apply mb-4;
@@ -18,16 +30,6 @@ body {
 
     h1,h2,h3,h4,h5,h6 {
         @apply mt-8;
-    }
-
-    a {
-        @apply underline;
-        text-underline-offset: 2px;
-        transition: color .2s ease-in-out;
-
-        &:hover {
-            @apply text-red-600;
-        }
     }
 
 	blockquote {
